--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <!-- #region HEADER -->
     <header class="page-header">
       <div class="container">
         <nav class="header-nav">
@@ -41,6 +42,11 @@
             </li>
           </ul>
         </nav>
+        <button type="button" class="menu-btn">
+          <svg class="icon-menu-btn">
+            <use href="./images/icons.svg#icon-menu-button"></use>
+          </svg>
+        </button>
         <address class="contacts">
           <ul class="contacts-list">
             <li class="contacts-item">
@@ -56,17 +62,85 @@
           </ul>
         </address>
       </div>
+      <div class="mobile-menu is-open">
+        <div class="container mobile-menu-container">
+          <button class="mobile-menu-close">
+            <svg class="icon-mobile-menu-close" width="8" height="8">
+              <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+          </button>
+          <nav class="mobile-menu-nav">
+            <ul class="mobile-list-nav">
+              <li class="mobile-list-item">
+                <a class="mobile-link blue" href="./index.html">Studio</a>
+              </li>
+              <li class="mobile-list-item">
+                <a class="mobile-link" href="">Portfolio</a>
+              </li>
+              <li class="mobile-list-item">
+                <a class="mobile-link" href="">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+          <address class="mobile-contacts">
+            <ul class="mobile-contacts-list">
+              <li class="mobile-contacts-item">
+                <a class="mobile-contacts-link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="mobile-contacts-item">
+                <a class="mobile-contacts-link" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="mobile-social-box">
+          <ul class="mobile-social-list">
+            <li class="mobile-social-link">
+              <svg class="icon-mobile-social-link">
+                <use
+                  href="./images/icons.svg#icon-instagram"
+                  width="40"
+                  height="40"
+                ></use>
+              </svg>
+            </li>
+            <li class="mobile-social-link">
+              <svg class="icon-mobile-social-link" width="40" height="40">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </li>
+            <li class="mobile-social-link">
+              <svg class="icon-mobile-social-link" width="40" height="40">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </li>
+            <li class="mobile-social-link">
+              <svg class="icon-mobile-social-link" width="40" height="40">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
+      </div>
     </header>
 
     <main class="main-page">
+      <!-- #region BUTTON section -->
+      <!--        
       <section class="section-button">
         <div class="container">
           <h1 class="solutions">Effective Solutions for Your Business</h1>
           <button type="button" class="btn-solutions">Order Service</button>
         </div>
-      </section>
+      </section> -->
+      <!-- #endregion -->
 
-      <section class="section-advantages">
+      <!-- #region ADVANTAGES section -->
+      <!-- <section class="section-advantages">
         <div class="container">
           <h2 class="advantages visually-hidden">Advantages</h2>
           <ul class="advantages-list">
@@ -120,9 +194,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
+      <!-- #endregion -->
 
-      <section class="section-team">
+      <!-- #region TEAM section -->
+      <!-- <section class="section-team">
         <div class="container">
           <h2 class="team">Our Team</h2>
           <ul class="team-list">
@@ -276,9 +352,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
+      <!-- #endregion -->
 
-      <section class="section-portfolio">
+      <!-- #region PORTFOLIO section -->
+      <!-- <section class="section-portfolio">
         <div class="container">
           <h2 class="portfolio">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -392,10 +470,12 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
+      <!-- #endregion -->
     </main>
 
-    <footer class="page-footer">
+    <!-- #region FOOTER -->
+    <!-- <footer class="page-footer">
       <div class="container">
         <div class="footer-logo-box">
           <a class="logo logo-footer" href="./index.html"
@@ -460,8 +540,11 @@
           </form>
         </div>
       </div>
-    </footer>
-    <div class="backdrop is-open">
+    </footer> -->
+    <!-- #endregion -->
+
+    <!-- #region BACKDROP -->
+    <!-- <div class="backdrop">
       <div class="modal">
         <button type="button" class="modal-button">
           <svg class="icon-close" width="8" height="8">
@@ -547,6 +630,7 @@
           <button class="form-button" type="submit">Send</button>
         </form>
       </div>
-    </div>
+    </div> -->
+    <!-- #endregion -->
   </body>
 </html>
