--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </li>
           </ul>
         </address>
-        <div class="mobile-menu">
+        <div class="mobile-menu is-open">
           <div class="container mobile-menu-container">
             <button class="mobile-menu-close">
               <svg class="icon-mobile-menu-close" width="8" height="8">
