--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </li>
           </ul>
         </address>
-        <div class="mobile-menu is-open">
+        <div class="mobile-menu">
           <div class="container mobile-menu-container">
             <button class="mobile-menu-close">
               <svg class="icon-mobile-menu-close" width="8" height="8">
@@ -97,31 +97,37 @@
                 </li>
               </ul>
             </address>
-          </div>
           <ul class="mobile-social-list">
             <li class="mobile-social-link">
-              <svg class="icon-mobile-social-link">
+              <a class="mobile-social-item" href="#">
+              <svg class="icon-mobile-social-link" width="24" height="24">
                 <use
-                  href="./images/icons.svg#icon-instagram"
-                  width="40"
-                  height="40"
-                ></use>
+                  href="./images/icons.svg#icon-instagram" >
+                </use>
               </svg>
+              </a>
             </li>
             <li class="mobile-social-link">
-              <svg class="icon-mobile-social-link" width="40" height="40">
-                <use href="./images/icons.svg#icon-twitter"></use>
+              <a class="mobile-social-item" href="#">
+              <svg class="icon-mobile-social-link" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter">
+                </use>
               </svg>
+              </a>
             </li>
             <li class="mobile-social-link">
-              <svg class="icon-mobile-social-link" width="40" height="40">
+              <a class="mobile-social-item" href="#">
+              <svg class="icon-mobile-social-link" width="24" height="24">
                 <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
+              </a>
             </li>
             <li class="mobile-social-link">
-              <svg class="icon-mobile-social-link" width="40" height="40">
+              <a class="mobile-social-item" href="#">
+              <svg class="icon-mobile-social-link" width="24" height="24">
                 <use href="./images/icons.svg#icon-linkedin"></use>
               </svg>
+              </a>
             </li>
           </ul>
         </div>
